SET(RO_CORE_LIBRARY "RoCore")
SET(RO_MATH_LIBRARY "RoMath")
SET(RO_AUDIO_LIBRARY "RoAudio")

MACRO(RO_TARGET_LINK_LIBRARIES TARGET)
    SET(MODULE_LIBS "")
    FOREACH(LIB_NAME ${ARGN})
        TARGET_LINK_LIBRARIES(
            ${TARGET}
            debug ${ROKLEGEND_LIB_DIR_DBG}/${LIB_NAME}_d.lib
            optimized ${ROKLEGEND_LIB_DIR_REL}/${LIB_NAME}.lib
        )
    ENDFOREACH()
ENDMACRO()

ADD_SUBDIRECTORY(core)
SET(RO_CORE_DIR ${ROKLEGEND_SOURCE_DIR}/core)

ADD_SUBDIRECTORY(math)
SET(RO_MATH_DIR ${ROKLEGEND_SOURCE_DIR}/math)

ADD_SUBDIRECTORY(audio)
ADD_DEPENDENCIES(${RO_AUDIO_LIBRARY}
    ${RO_CORE_LIBRARY}
    ${RO_AUDIO_LIBRARY}
)

ADD_SUBDIRECTORY(application)
ADD_DEPENDENCIES(${ROKLEGEND_PROJECT_NAME}
    ${RO_AUDIO_LIBRARY}
)