SET(RO_CORE_LIBRARY "RoCore")
SET(RO_MATH_LIBRARY "RoMath")
SET(RO_AUDIO_LIBRARY "RoAudio")
SET(RO_ARCHIVE_LIBRARY "RoArchive")
SET(RO_STORAGE_LIBRARY "RoStorage")

ADD_SUBDIRECTORY(core)
SET(RO_CORE_DIR ${ROKLEGEND_SOURCE_DIR}/core)

ADD_SUBDIRECTORY(math)
SET(RO_MATH_DIR ${ROKLEGEND_SOURCE_DIR}/math)

ADD_SUBDIRECTORY(archive)
ADD_DEPENDENCIES(${RO_ARCHIVE_LIBRARY}
	${RO_CORE_LIBRARY}
    ${GRF_PROJECT}
    ${ZLIB_LIBRARY_NAME}
)

ADD_SUBDIRECTORY(storage)
ADD_DEPENDENCIES(${RO_STORAGE_LIBRARY}
	${RO_CORE_LIBRARY}
	${SQLITEPP_LIBRARY_NAME}
)

ADD_SUBDIRECTORY(audio)
ADD_DEPENDENCIES(${RO_AUDIO_LIBRARY}
    ${RO_CORE_LIBRARY}
    ${RO_AUDIO_LIBRARY}
)

ADD_SUBDIRECTORY(application)
ADD_DEPENDENCIES(${ROKLEGEND_PROJECT_NAME}
    ${RO_AUDIO_LIBRARY}
    ${RO_ARCHIVE_LIBRARY}
	${RO_STORAGE_LIBRARY}
)