SET(RO_NETWORK_PACKETS
    packets/RoAccountGender.cpp
    packets/RoAccountGender.h
    packets/RoAuthenticatedAccount.cpp
    packets/RoAuthenticatedAccount.h
    packets/RoCharacterInformation.cpp
    packets/RoCharacterInformation.h
    packets/RoCharacterInformationCollection.h
    packets/RoCharacterListing.cpp
    packets/RoCharacterListing.h
    packets/RoCharacterServer.cpp
    packets/RoCharacterServer.h
    packets/RoCharacterServerCollection.cpp
    packets/RoCharacterServerCollection.h
    packets/RoCreateCharacterFailed.cpp
    packets/RoCreateCharacterFailed.h
    packets/RoCreateCharacterRequest.cpp
    packets/RoCreateCharacterRequest.h
    packets/RoCreateCharacterSuccess.cpp
    packets/RoCreateCharacterSuccess.h
    packets/RoGameLogin.cpp
    packets/RoGameLogin.h
    packets/RoLoginCredentials.cpp
    packets/RoLoginCredentials.h
    packets/RoLoginFailed.cpp
    packets/RoLoginFailed.h
    packets/RoLoginSuccessful.cpp
    packets/RoLoginSuccessful.h
    packets/RoPacket.h
    packets/RoPacketField.h
    packets/RoPacketTranslator.cpp
    packets/RoPacketTranslator.h
)
RO_SOURCE_GROUP(packets ${RO_NETWORK_PACKETS})

SET(RO_NETWORK_EVENTS
    events/RoExtendedPacketReceivedEvent.h
    events/RoPacketReceivedEvent.h
    events/RoSendPacketToServerEvent.h
    events/RoServerConnectedEvent.h
    events/RoServerConnectionFailedEvent.h
    events/RoServerConnectRequestEvent.h
    events/RoServerConnectRequestFailedEvent.h
    events/RoServerDisconnectedEvent.h
    events/RoServerDisconnectRequestEvent.h
)
RO_SOURCE_GROUP(events ${RO_NETWORK_EVENTS})

SET(RO_NETWORK_SOURCES
    ${RO_NETWORK_PACKETS}
    ${RO_NETWORK_EVENTS}
    CMakeLists.txt
    RoNetBufferDataStream.cpp
    RoNetBufferDataStream.h
    RoNetData.cpp
    RoNetData.h
    RoNetList.cpp
    RoNetList.h
    RoNetListContainer.cpp
    RoNetListContainer.h
    RoNetPacket.cpp
    RoNetPacket.h
    RoNetPacketBuilder.cpp
    RoNetPacketBuilder.h
    RoNetPacketDb.cpp
    RoNetPacketDb.h
    RoNetServer.cpp
    RoNetServer.h
    RoNetServerStatus.cpp
    RoNetServerStatus.h
    RoNetServerType.cpp
    RoNetServerType.h
    RoNetSocketInputStream.cpp
    RoNetSocketInputStream.h
    RoNetSqlitePacketDb.cpp
    RoNetSqlitePacketDb.h
    RoNetString.cpp
    RoNetString.h
    RoNetStringContainer.cpp
    RoNetStringContainer.h
    RoNetStructure.cpp
    RoNetStructure.h
    RoNetTcpConnection.cpp
    RoNetTcpConnection.h
    RoNetTypes.h
    RoNetworkManager.cpp
    RoNetworkManager.h
    RoNetXmlPacketDb.cpp
    RoNetXmlPacketDb.h
)

ADD_LIBRARY(${RO_NETWORK_LIBRARY} STATIC ${RO_NETWORK_SOURCES})